samples/_failures_safe/1761305180_6734ea_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5454f690.c: In function ‘main’:
./samples/SAFE/__tmp_5454f690.c:165:13: error: expected declaration or statement at end of input
  165 |             printf("Negative weights not allowed\n");
      |             ^~~~~~
./samples/SAFE/__tmp_5454f690.c:165:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5454f690.c:165:13: error: expected declaration or statement at end of input
